--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -664,12 +664,29 @@ section {
           justify-content: space-between;
 }
 
+@media (max-width: 768px) {
+  #WhatElseWeDoSide .swiper-container .whatElseWeDoSwiper .swiper-slide .what-card {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 240px;
+  }
+}
+
 #WhatElseWeDoSide .swiper-container .whatElseWeDoSwiper .swiper-slide .what-card h4 {
   font-size: 22px;
   font-family: "Metropolis-Medium", sans-serif;
   text-transform: uppercase;
   -ms-flex-item-align: start;
       align-self: flex-start;
+}
+
+@media (max-width: 768px) {
+  #WhatElseWeDoSide .swiper-container .whatElseWeDoSwiper .swiper-slide .what-card h4 {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -1193,11 +1210,27 @@ section {
   text-align: center;
 }
 
+@media (max-width: 992px) {
+  #biziSecenler h1 {
+    font-size: 100px;
+  }
+}
+
 #biziSecenler h3 {
   text-align: center;
   font-size: 48px;
   font-family: "Metropolis-Medium";
   margin-bottom: 42px;
+}
+
+@media (max-width: 992px) {
+  #biziSecenler h3 {
+    font-size: 30px;
+  }
+}
+
+#biziSecenler .biziSecenlerSwiper .swiper-slide {
+  text-align: center;
 }
 
 #biziSecenler .imgs-container {
