--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3237,6 +3237,116 @@ section {
   background-color: #a8a8a8;
 }
 
+#services-detail .img-body {
+  position: relative;
+  overflow: hidden;
+}
+
+#services-detail .img-body:hover .img-content {
+  opacity: 1;
+  bottom: 10px;
+}
+
+#services-detail .img-body .img-content {
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  position: absolute;
+  z-index: 5;
+  left: 20px;
+  right: 20px;
+  bottom: -100px;
+  height: 180px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 40px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 12px;
+}
+
+@media (max-width: 1400px) {
+  #services-detail .img-body .img-content {
+    height: 120px;
+  }
+}
+
+@media (max-width: 576px) {
+  #services-detail .img-body .img-content {
+    padding: 20px;
+    height: 80px;
+  }
+}
+
+#services-detail .img-body .img-content h4 {
+  font-size: 24px;
+  font-family: "Metropolis-Bold", sans-serif;
+  color: #fff;
+  z-index: 2;
+  margin-bottom: 14px;
+  text-transform: uppercase;
+}
+
+@media (max-width: 576px) {
+  #services-detail .img-body .img-content h4 {
+    font-size: 16px;
+  }
+}
+
+#services-detail .img-body .img-content h5 {
+  font-size: 18px;
+  font-family: "Metropolis-Bold", sans-serif;
+  color: #fff;
+  z-index: 2;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+@media (max-width: 576px) {
+  #services-detail .img-body .img-content h5 {
+    font-size: 14px;
+  }
+}
+
+#services-detail .all-btn {
+  text-transform: uppercase;
+  font-family: "Metropolis-Medium";
+  font-size: 16px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 16px 74px;
+  border: solid 1px #eaeaea;
+  border-radius: 30px;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  margin-top: 20px;
+}
+
+#services-detail .all-btn:hover {
+  background-color: #eaeaea;
+}
+
+#services-detail .all-btn i {
+  opacity: 0.24;
+  font-size: 20px;
+  position: absolute;
+  right: 20px;
+}
+
 /*--------------------------------------------------------------
 # Footer Side
 --------------------------------------------------------------*/
