--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2357,6 +2357,91 @@ section {
       }
     }
   }
+  .img-body {
+    position: relative;
+    overflow: hidden;
+    
+    &:hover {
+      .img-content {
+        opacity: 1;
+        bottom: 10px;
+      }
+    }
+    .img-content {
+      backdrop-filter: blur(5px);
+      opacity: 0;
+      transition: 0.5s;
+      position: absolute;
+      z-index: 5;
+      left: 20px;
+      right: 20px;
+      bottom: -100px;
+      height: 180px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      padding-left: 40px;
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 12px;
+      @include xxl {
+        height: 120px;
+      }
+
+      @include sm {
+        padding: 20px;
+        height: 80px;
+      }
+
+      h4 {
+        font-size: 24px;
+        font-family: "Metropolis-Bold", sans-serif;
+        color: #fff;
+        z-index: 2;
+        margin-bottom: 14px;
+        text-transform: uppercase;
+
+        @include sm {
+          font-size: 16px;
+        }
+      }
+      h5 {
+        font-size: 18px;
+        font-family: "Metropolis-Bold", sans-serif;
+        color: #fff;
+        z-index: 2;
+        margin: 0;
+        text-transform: uppercase;
+
+        @include sm {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+  .all-btn {
+    text-transform: uppercase;
+    font-family: "Metropolis-Medium";
+    font-size: 16px;
+    display: inline-flex;
+    align-items: center;
+    padding: 16px 74px;
+    border: solid 1px #eaeaea;
+    border-radius: 30px;
+    position: relative;
+    transition: 0.3s;
+    margin-top: 20px;
+
+    &:hover {
+      background-color: #eaeaea;
+    }
+
+    i {
+      opacity: 0.24;
+      font-size: 20px;
+      position: absolute;
+      right: 20px;
+    }
+  }
 }
 
 /*--------------------------------------------------------------
