--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -477,7 +477,7 @@ section {
             @include md {
               font-size: 16px;
             }
-            @include sm{
+            @include sm {
               font-size: 12px;
             }
           }
@@ -494,7 +494,7 @@ section {
             @include md {
               font-size: 12px;
             }
-            @include sm{
+            @include sm {
               font-size: 10px;
             }
           }
@@ -760,7 +760,9 @@ section {
     border-radius: 30px;
     position: relative;
     transition: 0.3s;
-
+    @include sm {
+      padding: 16px 60px;
+    }
     &:hover {
       background-color: #eaeaea;
     }
@@ -886,7 +888,7 @@ section {
             padding: 14px 0;
             transform: 0.3s;
             text-align: center;
-            @include sm{
+            @include sm {
               width: 140px;
               font-size: 14px;
             }
@@ -916,6 +918,9 @@ section {
     border-radius: 30px;
     position: relative;
     transition: 0.3s;
+    @include sm {
+      padding: 16px 60px;
+    }
     &:hover {
       background-color: #eaeaea;
     }
@@ -1287,6 +1292,9 @@ section {
     border-radius: 30px;
     position: relative;
     transition: 0.3s;
+    @include sm {
+      padding: 16px 60px;
+    }
     &:hover {
       background-color: #eaeaea;
     }
@@ -1392,7 +1400,9 @@ section {
     border-radius: 30px;
     position: relative;
     transition: 0.3s;
-
+    @include sm {
+      padding: 16px 60px;
+    }
     &:hover {
       background-color: #eaeaea;
     }
@@ -1984,7 +1994,9 @@ section {
     border-radius: 30px;
     position: relative;
     transition: 0.3s;
-
+    @include sm {
+      padding: 16px 60px;
+    }
     &:hover {
       background-color: #eaeaea;
     }
@@ -2370,7 +2382,7 @@ section {
   .img-body {
     position: relative;
     overflow: hidden;
-    
+
     &:hover {
       .img-content {
         opacity: 1;
@@ -2440,7 +2452,9 @@ section {
     position: relative;
     transition: 0.3s;
     margin-top: 20px;
-
+    @include sm {
+      padding: 16px 60px;
+    }
     &:hover {
       background-color: #eaeaea;
     }
