--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1417,7 +1417,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### blog-detail.HTML CSS KODLARI  START ###############
+############### blog-detay.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #blogContent {
   margin-top: 120px;
@@ -1579,7 +1579,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### references.HTML CSS KODLARI  START ###############
+############### referanslar.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #references {
   margin-top: 120px;
@@ -1764,7 +1764,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### references-detail.HTML CSS KODLARI  START ###############
+############### referans-detay.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #references-detail {
   margin-top: 120px;
@@ -2025,7 +2025,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### Contact.HTML CSS KODLARI  START ###############
+############### iletisim.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #contact {
   margin-top: 120px;
@@ -2141,7 +2141,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### About-us.HTML CSS KODLARI  START ###############
+############### hakkimizda.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #aboutUs {
   margin-top: 120px;
@@ -2197,7 +2197,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### Services.HTML CSS KODLARI  START ###############
+############### hizmetler.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #services {
   margin-top: 120px;
@@ -2320,7 +2320,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### Services.HTML CSS KODLARI  START ###############
+############### hizmetler.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #services-detail {
   margin-top: 120px;
