--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1937,7 +1937,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### blog-detail.HTML CSS KODLARI  START ###############
+############### blog-detay.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #blogContent {
   margin-top: 120px;
@@ -2163,7 +2163,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### references.HTML CSS KODLARI  START ###############
+############### referanslar.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #references {
   margin-top: 120px;
@@ -2424,7 +2424,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### references-detail.HTML CSS KODLARI  START ###############
+############### referans-detay.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #references-detail {
   margin-top: 120px;
@@ -2798,7 +2798,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### Contact.HTML CSS KODLARI  START ###############
+############### iletisim.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #contact {
   margin-top: 120px;
@@ -2978,7 +2978,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### About-us.HTML CSS KODLARI  START ###############
+############### hakkimizda.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #aboutUs {
   margin-top: 120px;
@@ -3046,7 +3046,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### Services.HTML CSS KODLARI  START ###############
+############### hizmetler.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #services {
   margin-top: 120px;
@@ -3222,7 +3222,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-############### Services.HTML CSS KODLARI  START ###############
+############### hizmetler.html CSS KODLARI  START ###############
 --------------------------------------------------------------*/
 #services-detail {
   margin-top: 120px;
