--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -86,6 +86,9 @@ section {
       .navbar-container {
         height: 380px;
         overflow: auto;
+        @media (max-height: 485px) and  (max-width: 1100px) {
+          height: 140px;
+        }
       }
     }
   }
@@ -105,6 +108,9 @@ section {
   .container-fluid{
     @include lg{
       padding: 20px 0;
+    }
+    @media (max-height: 485px) and  (max-width: 1100px) {
+      padding: 10px 0;
     }
   }
   .navbar-toggle {
@@ -135,6 +141,10 @@ section {
     transition: 0.3s;
     @media (max-width: 1550px) {
       width: 1000px;
+    }
+  
+    @include xxl{
+      width: 900px;
     }
     @include lg {
       width: auto;
@@ -208,8 +218,14 @@ section {
           display: block;
           color: #4b4b4b;
           @media (max-width: 1550px) {
-            padding: 10px;
+            padding: 8px;
+           
           }
+          @media (max-height: 485px) and  (max-width: 1100px) {
+            padding: 6px;
+            font-size: 14px;
+          }
+       
           &.active {
             background-color: #ebebeb;
             color: #000000;
